# jorge-menjivar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: neural-activity.yml
src/: constants.py  main.py  nn.py  quantum_circuit_qiskit.py  visualization.py
src/models/: __init__.py  nn.py  quantum.py
templates/: quantum-banner.svg.jinja
